--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.c196.TermScheduler">
+    package="com.c196.TermScheduler" >
 
     <application
         android:allowBackup="true"
@@ -8,13 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TermScheduler">
+        android:theme="@style/Theme.TermScheduler" >
         <activity
-            android:name=".UI.TermDetail"
-            android:exported="true" />
+            android:name=".UI.Term.TermDetail"
+            android:exported="false" />
         <activity
-            android:name=".UI.TermList"
-            android:exported="true">
+            android:name=".UI.Term.Test"
+            android:exported="false" />
+        <activity
+            android:name=".UI.Term.TermList"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
