--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TermScheduler">
         <activity
+            android:name=".UI.Assessment.AssessmentAdd"
+            android:exported="false" />
+        <activity
+            android:name=".UI.Term.AssessmentDetail"
+            android:exported="false" />
+        <activity
             android:name=".UI.Term.TermAdd"
             android:exported="false" />
         <activity
