--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TermScheduler">
         <activity
+            android:name=".UI.Term.CourseModify"
+            android:exported="false" />
+        <activity
             android:name=".UI.Term.TermModify"
             android:exported="false" />
         <activity
