--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TermScheduler">
         <activity
+            android:name=".UI.Assessment.AssessmentModify"
+            android:exported="false" />
+        <activity
             android:name=".UI.Term.CourseModify"
             android:exported="false" />
         <activity
@@ -19,7 +22,7 @@
             android:name=".UI.Assessment.AssessmentAdd"
             android:exported="false" />
         <activity
-            android:name=".UI.Term.AssessmentDetail"
+            android:name=".UI.Assessment.AssessmentDetail"
             android:exported="false" />
         <activity
             android:name=".UI.Term.TermAdd"
