--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.c196.TermScheduler" >
+    package="com.c196.TermScheduler">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_round"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TermScheduler" >
+        android:theme="@style/Theme.TermScheduler">
+        <activity
+            android:name=".UI.Assessment.AssessmentList"
+            android:exported="false" />
+        <activity
+            android:name=".UI.Course.CourseList"
+            android:exported="false" />
         <activity
             android:name=".UI.Term.CourseModify"
             android:exported="false" />
@@ -38,14 +44,15 @@
             android:exported="false" />
         <activity
             android:name=".UI.Term.TermList"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".Utils.TermReceiver"/>
+
+        <receiver android:name=".Utils.TermReceiver" />
     </application>
 
 </manifest>
